--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,6 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.warning.mode=all
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
